infra/k8s/leaderboard-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboard-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: leaderboard-service

  template:
    metadata:
      labels:
        app: leaderboard-service

    spec:
      containers:
        - name: leaderboard-service
          image: ghcr.io/M-Ali-Fouladi/leaderboard-service:c00eb5087a3b8a0e08e56c9a92ef206e7826e29a
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: leaderboard-service

spec:
  selector:
    app: leaderboard-service

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
