infra/k8s/matchmaking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchmaking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: matchmaking-service

  template:
    metadata:
      labels:
        app: matchmaking-service

    spec:
      containers:
        - name: matchmaking-service
          image: ghcr.io/M-Ali-Fouladi/matchmaking-service:5600f6386405f7211a620218640831bd74a2dda2
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: matchmaking-service

spec:
  selector:
    app: matchmaking-service

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
