infra/k8s/player-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: player-service

  template:
    metadata:
      labels:
        app: player-service

    spec:
      containers:
        - name: player-service
          image: ghcr.io/M-Ali-Fouladi/player-service:b1d5542bbb31e5ea76fcf1feab992c90029cbfaa
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: player-service

spec:
  selector:
    app: player-service

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
