infra/k8s/telemetry-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telemetry-service

  template:
    metadata:
      labels:
        app: telemetry-service

    spec:
      containers:
        - name: telemetry-service
          image: ghcr.io/M-Ali-Fouladi/telemetry-service:75c71a80bcd0dccb026e1ae379d05683fb2a88d7
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-service

spec:
  selector:
    app: telemetry-service

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
