infra/k8s/websocket-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-service

  template:
    metadata:
      labels:
        app: websocket-service

    spec:
      containers:
        - name: websocket-service
          image: ghcr.io/M-Ali-Fouladi/websocket-service:584b729a71fd97554e6f6907167b825991104819
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service

spec:
  selector:
    app: websocket-service

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
